# pyroma

./: .gitattributes  .hgignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGES.txt  DEVELOPMENT.md  DEVELOPMENT.rst  DEVELOPMENT.txt  HISTORY.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  fetch_classifiers.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
docs/: HISTORY.txt
pyroma/: __init__.py  classifiers.py  distributiondata.py  packagedata.py  projectdata.py  pypidata.py  ratings.py  tests.py
pyroma/testdata/complete/: setup.py
pyroma/testdata/complete/complete/: __init__.py  tests.py
pyroma/testdata/complete/complete.egg-info/: PKG-INFO  SOURCES.txt
pyroma/testdata/custom_test/: setup.py
pyroma/testdata/distributions/: complete-1.0.dev.tar  complete-1.0.dev.tar.bz2  complete-1.0.dev1.tar  complete-1.0.dev1.tar.bz2  complete-1.0dev.tar  complete-1.0dev.tar.bz2
pyroma/testdata/jsondata/: complete.json  distribute.json
pyroma/testdata/lacking/: setup.py
pyroma/testdata/minimal/: randomfile.txt  setup.cfg  setup.py
pyroma/testdata/minimal/minimal/: __init__.py
pyroma/testdata/minimal/minimal.egg-info/: PKG-INFO  SOURCES.txt
pyroma/testdata/only_config/: setup.cfg
pyroma/testdata/pep517/: setup.cfg
pyroma/testdata/pep621/: README.txt  pyproject.toml
pyroma/testdata/pep621/pyroma_pep621_test_pkg/: __init__.py
pyroma/testdata/private_classifier/: setup.cfg
pyroma/testdata/setup_config/: setup.cfg
pyroma/testdata/xmlrpcdata/: complete.html  completedata.py  distributedata.py
pyroma/testdata/xmlrpcdata/complete/: 1.0.dev1.html
pyroma/testdata/xmlrpcdata/distribute/: 0.6.15.html
scripts/: pyroma
