[metadata]
name = pyroma
version = 4.0b3.dev0
description = Test your project's packaging friendliness
long_description = file: README.rst, CHANGES.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
keywords = pypi, quality, testing
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/pyroma
license = MIT
project_urls =
    Source Code = https://github.com/regebro/pyroma

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
install_requires =
    setuptools
    docutils
    pygments
    requests
    build
    wheel

[options.packages.find]
where = .

[options.extras_require]
test =
    pytest
    pytest-cov
    setuptools>=60

[options.entry_points]
console_scripts =
    pyroma = pyroma:main

zest.releaser.prereleaser.before =
    pyroma = pyroma:zester

[flake8]
max-line-length=120

[bdist_wheel]
universal=1

[tool:pytest]
testpaths =
    pyroma/tests.py

[check-manifest]
ignore =
  .pre-commit-hooks.yaml
  fetch_classifiers.py
