[metadata]
name = pyroma
version = 4.3.dev0
description = Test your project's packaging friendliness
long_description = file: README.rst, CHANGES.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = pypi, quality, testing
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/pyroma
license = MIT
project_urls =
    Source Code = https://github.com/regebro/pyroma

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
python_requires = >=3.9
install_requires =
    build>=0.7.0
    docutils
    packaging
    pygments
    requests
    setuptools>=42
    trove-classifiers>=2022.6.26

[options.packages.find]
where = .

[options.extras_require]
test =
    setuptools>=60
    zest.releaser[recommended]

[options.entry_points]
console_scripts =
    pyroma = pyroma:main

zest.releaser.prereleaser.before =
    pyroma = pyroma:zester

[flake8]
max-line-length=120

[tool:pytest]
testpaths =
    pyroma/tests.py

[check-manifest]
ignore =
  .pre-commit-hooks.yaml

[zest.releaser]
create-wheel = yes
