[metadata]
name = only_config
version = 1.0
description = This is a test package for pyroma
long_description = file: README.txt
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/pyroma
classifiers =
    Development Status :: 6 - Mature
    Operating System :: OS Independent
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    License :: OSI Approved :: MIT License
keywords =
    pypi
    quality
    example
