[metadata]
name = private_classifier
version = 1.0
description = A project with a private classifier
long_description = file: README.txt
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://example.com
classifiers =
    Development Status :: 6 - Mature
    Operating System :: OS Independent
    Private :: Do Not Upload
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    License :: OSI Approved :: MIT License
keywords =
    private
[options]
python_requires = >=2.6
